# greet-poetry

./: .gitignore  README.md  pyproject.toml
.github/workflows/: analyze.yml  lint.yml  publish.yml  test.yml
src/greet/: __init__.py  cli.py
src/hello/: __init__.py  cli.py  core.py
src/hello/recipe/: greeting.py
src/hello_quinx/: __init__.py  cli.py  core.py
src/hello_quinx/recipe/: greeting.py
tests/: test_core.py  test_greet.py  test_greeting.py
