[tool.poetry]
name = "hello_quinx"
version = "0.1.9"
description = "Learn how to publish a PyPI package"
authors = ["Quynh Nguyen <seriquynh@gmail.com>"]
readme = "README.md"
packages = [{include = "hello_quinx", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
black = "^25.1.0"
isort = "^6.0.1"
flake8 = "^7.1.2"

[tool.poetry.scripts]
hello = "hello_quinx.cli:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py37']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[flake8]
max-line-length = 88
extend-ignore = 'E203'
