[project]
name = "greet-poetry"
version = "0.1.0"
description = "This is a Python package template using Poetry."
authors = [{name="Quynh Nguyen", email="<seriquynh@gmail.com>"}]
readme = "README.md"
license = "MIT"
requires-python = ">=3.11,<4.0"
dependencies = [
]

[project.scripts]
greet = "greet.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [{include = "greet", from = "src"}]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
black = "^25.1.0"
isort = "^6.0.1"
mypy = "^1.15.0"
autoflake = "^2.3.1"

[tool.black]
line-length = 88
include = '\.pyi?$'
target-version = ['py311', 'py312', 'py313']

[tool.isort]
line_length = 88
multi_line_output = 3
profile = "black"
